# BV-ML2026SS_MCI

./: .gitignore  README.md  pyproject.toml
Report/: AGENTS.md  Main-Report.tex  Main-Thesis.tex  Makefile  README.md  README.org  copilot-instructions.md  mcidoc.cls  references.bib
Report/Sources/: Academic_walkthrough.pdf.extracted.md  formatting_rules.tex
Report/chapter/: durchfuehrung.tex  fazit.tex  introduction.tex  theoretical_background.tex
calib/: mono_camera_params.pkl  mono_then_stereo_calibration.ipynb  stereo_params_mono_first.pkl
calib/tools/: calibration_report.py  compare_normal_swapped_calibration.py  debug_charuco_detection.py  debug_mono_first_stereo.py  diagnose_calibration.py  make_calib_contact_sheet.py
pointclouds/: scene_pointcloud_20260603_172225.ply  scene_pointcloud_20260603_172633.ply  scene_pointcloud_sanitized_20260605_104305.ply
